--- a/serverless.yaml
+++ b/serverless.yaml
@@ -2,9 +2,9 @@ service: rarecamp${{env:SERVERLESS_SERVICE_SUFFIX, ''}}
 provider:
   name: aws
   stackName: ${{self:service}}-${{self:provider.stage}}
-  runtime: nodejs12.x
-  memorySize: 512
-  timeout: 6
+  runtime: nodejs14.x
+  memorySize: 128
+  timeout: 29
   logRetentionInDays: ${{self:custom.stages.${{self:provider.stage}}.logRetentionInDays}}
   stage: ${{opt:stage, env:NODE_ENV, 'development'}}
   profile: ${{self:custom.stageConfig.profile}}
@@ -16,6 +16,7 @@ provider:
       level: INFO # TODO: add custom field for setting this; default to ERROR for prod
   environment:
     USER_TABLE: !Ref UserTable
+    DISEASE_TABLE: !Ref DiseaseTable
 
     # Enable connection reuse for AWS SDK for instant performance boost
     # https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/node-reusing-connections.html
@@ -31,15 +32,12 @@ plugins:
   - serverless-plugin-tracing
   - serverless-iam-roles-per-function
   - serverless-webpack
-  - serverless-appsync-plugin
-  # - serverless-apigateway-service-proxy
   - serverless-stack-output
   - serverless-cloudside-plugin
   - serverless-plugin-aws-alerts
   - '@brettstack/serverless-amplify-plugin'
   - serverless-dynamodb-local
   - serverless-offline
-  - serverless-appsync-simulator
   - serverless-stack-termination-protection
 
 custom:
@@ -67,6 +65,7 @@ custom:
     production:
       profile: rarecamp_prod
       logRetentionInDays: 14
+      pointInTimeRecoveryEnabled: true
       api:
         domainEnabled: false
         domainName: api.example.com
@@ -98,7 +97,7 @@ custom:
     buildCommandEnvVars:
       prefix: 'REACT_APP_'
       allow:
-        - GraphQlApiUrl
+        - ApiEndpoint
         - CognitoIdentityPoolId,
         - CognitoUserPoolId,
         - CognitoUserPoolClientId,
@@ -131,7 +130,6 @@ custom:
     start:
       dbPath: '.dynamodb'
       migrate: false
-  appSync: ${{file(templates/graphql.yml)}}
 
 functions: ${{file(templates/functions.yml)}}
     
