feat: add basic cognito flow

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "init": "npm i && cd packages/ui && npm i",
-    "start:ui": "cd packages/ui && npm start",
-    "start:ui:offline": "REACT_APP_ApiEndpoint=http://localhost:4911 npm run start:ui",
-    "start:api": "sls offline cloudside",
+    "start:ui": "cd packages/ui && npm run dev",
+    "start:ui:offline": "NEXT_PUBLIC_ApiEndpoint=http://localhost:4911 npm run start:ui",
+    "start:api": "LAMBDA_RUNTIME=nodejs12.x sls offline cloudside --cloudStage=development",
     "package:dev": "sls package --stage development",
     "deploy-prepack:dev": "sls deploy --package .serverless --stage development",
     "deploy:dev": "sls deploy --stage development",
+    "deploy:express:dev": "sls deploy -f express --stage development",
+    "deploy:postAuthN:dev": "sls deploy -f postAuthN --stage development",
     "package:staging": "NODE_ENV=production sls package --stage staging",
     "deploy-prepack:staging": "NODE_ENV=production sls deploy --package .serverless --stage staging",
     "deploy:staging": "NODE_ENV=production sls deploy --stage staging",
