--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
     "antd": "^4.12.3",
     "autoprefixer": "^10.1.0",
     "aws-amplify": "^3.3.17",
+    "aws-amplify-react": "^4.2.23",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
