feat: add basic cognito flow and add Project API (#41)
* feat: add basic cognito flow

* test: fix test

* fix: fix amplify buildCommandEnvVars prefix to use NEXT_PUBLIC_

* fix: remove trailing commas in buildCommandEnvVars

* feat(api): add project table, routes, controller, and model

* fix: hide amplify logout header

* feat: add Project; use Ant Layout

Co-authored-by: Brett <brett@vendia.net>

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:offline": "NEXT_PUBLIC_ApiEndpoint=http://localhost:4911 npm run dev",
     "build-only": "next build",
     "build": "next build && next export",
     "start": "next start",
@@ -21,6 +22,7 @@
     "antd": "^4.12.3",
     "autoprefixer": "^10.1.0",
     "aws-amplify": "^3.3.17",
+    "aws-amplify-react": "^4.2.23",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
