--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,11 +24,9 @@
     "aws-amplify": "^3.3.17",
     "aws-amplify-react": "^4.2.23",
     "next": "10.0.3",
-    "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "^6.13.1",
-    "tailwindcss": "^2.0.2"
+    "react-hook-form": "^6.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
