--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,10 +19,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/next": "^9.0.0",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "antd": "^4.12.3",
     "autoprefixer": "^10.1.0",
     "aws-amplify": "^3.3.17",
     "aws-amplify-react": "^4.2.23",
+    "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.1",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
