--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "dev:offline": "NEXT_PUBLIC_ApiEndpoint=http://localhost:4911 npm run dev",
     "build-only": "next build",
-    "build": "next build && next export",
+    "build": "npm run export",
     "start": "next start",
     "export": "next build && next export",
     "format": "prettier-eslint --write $PWD/'**/*.[jt]s?(x)' --ignore '**/.next/**' && eslint --fix .",
