--- a/templates/dynamodb.yml
+++ b/templates/dynamodb.yml
@@ -38,7 +38,7 @@ Resources:
         - AttributeName: id
           AttributeType: S
 
-  ProjectTable:
+  ProgramTable:
     Type: AWS::DynamoDB::Table
     Properties:
       BillingMode: PAY_PER_REQUEST
@@ -51,6 +51,23 @@ Resources:
           AttributeName: id
       AttributeDefinitions:
         - AttributeName: userId
+          AttributeType: S
+        - AttributeName: id
+          AttributeType: S
+
+  ProjectTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      PointInTimeRecoverySpecification:
+        PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
+      KeySchema:
+        - KeyType: HASH
+          AttributeName: programId
+        - KeyType: RANGE
+          AttributeName: id
+      AttributeDefinitions:
+        - AttributeName: programId
           AttributeType: S
         - AttributeName: id
           AttributeType: S
