--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,7 +26,8 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "^6.13.1"
+    "react-hook-form": "^6.13.1",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
