feat(api/task): add task API; fix cross-user resource fetching

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -20,6 +20,7 @@ provider:
     DISEASE_TABLE: !Ref DiseaseTable
     PROGRAM_TABLE: !Ref ProgramTable
     PROJECT_TABLE: !Ref ProjectTable
+    TASK_TABLE: !Ref TaskTable
 
     # Enable connection reuse for AWS SDK for instant performance boost
     # https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/node-reusing-connections.html
