Add sign up and sign in functionalities.

--- a/packages/ui/.env.development.example
+++ b/packages/ui/.env.development.example
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
 ApiEndpoint=https://wjiplwvjc5hprnhgm2sfd6q34u.appsync-api.us-west-2.amazonaws.com/graphql
-CognitoIdentityPoolId=us-west-2:924310d3-4231-4e84-9a36-79e5787fb0ab
-CognitoUserPoolId=us-west-2_MTN9tcGmj
-CognitoUserPoolClientId=2hslap0dc1l2vnk48b774qk2vs
-Region=us-west-2
+CognitoIdentityPoolId=ap-south-1:89d2a625-af3c-43b1-bba6-f5b309c14b83
+CognitoUserPoolId=ap-south-1_AnYbk8zYQ
+CognitoUserPoolClientId=2cq2c6gs5fqucqjobedacduilk
+Region=ap-south-1
