--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-fileupload": "^2.4.0",
     "react-hook-form": "^6.13.1",
     "react-quill": "^1.3.5"
   },
