feat(api/task): add task API; fix cross-user resource fetching (#47)
* feat(api/task): add task API; fix cross-user resource fetching

* fix(api): add back parameter checks to controller methods

* refactor(api): add getPk function to controllers

* refactor(api): clarify partitionKey format comment

* feat(api/project): rename partition key from programId to programKey

* fix(api): remove import of non-existing routes/user

* feat(api/task): rename sort key from projectId to projectKey

--- a/templates/dynamodb.yml
+++ b/templates/dynamodb.yml
@@ -75,11 +75,11 @@ Resources:
         PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
       KeySchema:
         - KeyType: HASH
-          AttributeName: programId
+          AttributeName: programKey
         - KeyType: RANGE
           AttributeName: id
       AttributeDefinitions:
-        - AttributeName: programId
+        - AttributeName: programKey
           AttributeType: S
         - AttributeName: id
           AttributeType: S
@@ -112,3 +112,19 @@ Resources:
           Projection:
             ProjectionType: "ALL"
 
+  TaskTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      PointInTimeRecoverySpecification:
+        PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
+      KeySchema:
+        - KeyType: HASH
+          AttributeName: projectKey
+        - KeyType: RANGE
+          AttributeName: id
+      AttributeDefinitions:
+        - AttributeName: projectKey
+          AttributeType: S
+        - AttributeName: id
+          AttributeType: S
