ci: install packages/api dependencies

--- a/.github/workflows/on-push-to-master.yaml
+++ b/.github/workflows/on-push-to-master.yaml
@@ -23,7 +23,8 @@ jobs:
     - name: Install package
       run: |
         (npm ci && npm audit --audit-level critical && npm test) & \
-        (cd packages/ui && npm ci && npm audit --audit-level critical && npm test)
+        (cd packages/ui && npm ci && npm audit --audit-level critical && npm test) & \
+        (cd packages/api && npm ci && npm audit --audit-level critical && npm test)
 
     - name: Deploy to staging
       run: |
