fix: replace AWS_PROFILE with hardcoded rarecamp_dev
To prevent accidental deployment to unintended AWS account

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -48,7 +48,7 @@ plugins:
 custom:
   stages:
     development:
-      profile: ${{env:AWS_PROFILE}}
+      profile: rarecamp_dev
       logRetentionInDays: 1
       amplify:
       api:
