--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,8 @@
     "test": "jest "
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^26.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -28,12 +30,12 @@
     "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
     "next": "10.0.3",
-    "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-fileupload": "^2.4.0",
     "react-hook-form": "^6.13.1",
-    "react-query": "^3.12.0",
-    "tailwindcss": "^2.0.2"
+    "react-quill": "^1.3.5",
+    "react-query": "^3.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
