default tasks and projects

--- a/templates/dynamodb.yml
+++ b/templates/dynamodb.yml
@@ -46,25 +46,14 @@ Resources:
         PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
       KeySchema:
         - KeyType: HASH
-          AttributeName: userId
+          AttributeName: workspaceKey
         - KeyType: RANGE
           AttributeName: id
       AttributeDefinitions:
-        - AttributeName: userId
+        - AttributeName: workspaceKey
           AttributeType: S
         - AttributeName: id
           AttributeType: S
-        - AttributeName: workspaceId
-          AttributeType: S
-      LocalSecondaryIndexes:
-        - IndexName: WSI
-          KeySchema:
-            - KeyType: HASH
-              AttributeName: userId
-            - KeyType: RANGE
-              AttributeName: workspaceId
-          Projection:
-            ProjectionType: "ALL"
 
 
   ProjectTable:
@@ -100,17 +89,6 @@ Resources:
           AttributeType: S
         - AttributeName: id
           AttributeType: S
-        - AttributeName: diseaseId
-          AttributeType: S
-      LocalSecondaryIndexes:
-        - IndexName: DSI
-          KeySchema:
-            - KeyType: HASH
-              AttributeName: userId
-            - KeyType: RANGE
-              AttributeName: diseaseId
-          Projection:
-            ProjectionType: "ALL"
 
   TaskTable:
     Type: AWS::DynamoDB::Table
