--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
     "node-fetch": "^2.6.1",
+    "sanitize-html": "^2.3.2",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
   }
