--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,13 +29,13 @@
     "aws-amplify-react": "^4.2.23",
     "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
-    "next": "10.0.3",
+    "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-fileupload": "^2.4.0",
+    "react-fileupload": "^2.0.0",
     "react-hook-form": "^6.13.1",
-    "react-quill": "^1.3.5",
-    "react-query": "^3.12.0"
+    "react-query": "^3.12.0",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
