--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "handler.js",
   "scripts": {
     "test": "(cd packages/ui && npm test) & (cd packages/api && npm test)",
-    "init": "npm i && cd packages/ui && npm i && cd packages/api && npm i",
+    "postinstall": "npm i --prefix ./packages/ui  && npm i --prefix ./packages/api",
     "start:ui": "cd packages/ui && npm run dev",
     "start:ui:offline": "cd packages/ui && npm run dev:offline",
     "start:api": "LAMBDA_RUNTIME=nodejs12.x sls offline cloudside --cloudStage=development",
@@ -60,6 +60,5 @@
     "serverless-stack-termination-protection": "^1.0.4",
     "serverless-webpack": "^5.3.2",
     "webpack": "^4.44.2"
-  },
-  "dependencies": {}
+  }
 }
