--- a/templates/dynamodb.yml
+++ b/templates/dynamodb.yml
@@ -38,52 +38,6 @@ Resources:
         - AttributeName: id
           AttributeType: S
 
-  ProgramTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      BillingMode: PAY_PER_REQUEST
-      PointInTimeRecoverySpecification:
-        PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
-      KeySchema:
-        - KeyType: HASH
-          AttributeName: userId
-        - KeyType: RANGE
-          AttributeName: id
-      AttributeDefinitions:
-        - AttributeName: userId
-          AttributeType: S
-        - AttributeName: id
-          AttributeType: S
-        - AttributeName: workspaceId
-          AttributeType: S
-      LocalSecondaryIndexes:
-        - IndexName: WSI
-          KeySchema:
-            - KeyType: HASH
-              AttributeName: userId
-            - KeyType: RANGE
-              AttributeName: workspaceId
-          Projection:
-            ProjectionType: "ALL"
-
-
-  ProjectTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      BillingMode: PAY_PER_REQUEST
-      PointInTimeRecoverySpecification:
-        PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
-      KeySchema:
-        - KeyType: HASH
-          AttributeName: programKey
-        - KeyType: RANGE
-          AttributeName: id
-      AttributeDefinitions:
-        - AttributeName: programKey
-          AttributeType: S
-        - AttributeName: id
-          AttributeType: S
-
   WorkspaceTable:
     Type: AWS::DynamoDB::Table
     Properties:
@@ -100,17 +54,40 @@ Resources:
           AttributeType: S
         - AttributeName: id
           AttributeType: S
-        - AttributeName: diseaseId
+
+  ProgramTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      PointInTimeRecoverySpecification:
+        PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
+      KeySchema:
+        - KeyType: HASH
+          AttributeName: workspaceId
+        - KeyType: RANGE
+          AttributeName: id
+      AttributeDefinitions:
+        - AttributeName: workspaceId
           AttributeType: S
-      LocalSecondaryIndexes:
-        - IndexName: DSI
-          KeySchema:
-            - KeyType: HASH
-              AttributeName: userId
-            - KeyType: RANGE
-              AttributeName: diseaseId
-          Projection:
-            ProjectionType: "ALL"
+        - AttributeName: id
+          AttributeType: S
+
+  ProjectTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      PointInTimeRecoverySpecification:
+        PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
+      KeySchema:
+        - KeyType: HASH
+          AttributeName: programId
+        - KeyType: RANGE
+          AttributeName: id
+      AttributeDefinitions:
+        - AttributeName: programId
+          AttributeType: S
+        - AttributeName: id
+          AttributeType: S
 
   TaskTable:
     Type: AWS::DynamoDB::Table
@@ -120,11 +97,11 @@ Resources:
         PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
       KeySchema:
         - KeyType: HASH
-          AttributeName: projectKey
+          AttributeName: projectId
         - KeyType: RANGE
           AttributeName: id
       AttributeDefinitions:
-        - AttributeName: projectKey
+        - AttributeName: projectId
           AttributeType: S
         - AttributeName: id
           AttributeType: S
