--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,10 +34,12 @@
     "react-dom": "17.0.1",
     "react-fileupload": "^2.4.0",
     "react-hook-form": "^6.13.1",
+    "react-query": "^3.12.0",
     "react-quill": "^1.3.5",
-    "react-query": "^3.12.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@aws-amplify/ui-react": "^1.0.5",
     "@babel/core": "^7.12.9",
     "@types/jest": "^26.0.17",
     "@types/node": "^14.14.10",
@@ -45,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
