--- a/serverless.yaml
+++ b/serverless.yaml
@@ -46,6 +46,7 @@ plugins:
   - serverless-stack-termination-protection
 
 custom:
+  component: '@sls-next/serverless-component@1.17.0'
   stages:
     development:
       profile: rarecamp_dev
