--- a/templates/dynamodb.yml
+++ b/templates/dynamodb.yml
@@ -7,9 +7,9 @@ Resources:
         PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
       KeySchema:
         - KeyType: HASH
-          AttributeName: id
+          AttributeName: userId
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: userId
           AttributeType: S
 
   OrganizationTable:
@@ -20,9 +20,9 @@ Resources:
         PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
       KeySchema:
         - KeyType: HASH
-          AttributeName: id
+          AttributeName: organizationId
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: organizationId
           AttributeType: S
 
   DiseaseTable:
@@ -33,9 +33,9 @@ Resources:
         PointInTimeRecoveryEnabled: ${{self:custom.stageConfig.pointInTimeRecoveryEnabled, false}}
       KeySchema:
         - KeyType: HASH
-          AttributeName: id
+          AttributeName: diseaseId
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: diseaseId
           AttributeType: S
 
   WorkspaceTable:
@@ -48,11 +48,11 @@ Resources:
         - KeyType: HASH
           AttributeName: userId
         - KeyType: RANGE
-          AttributeName: id
+          AttributeName: workspaceId
       AttributeDefinitions:
         - AttributeName: userId
           AttributeType: S
-        - AttributeName: id
+        - AttributeName: workspaceId
           AttributeType: S
 
   ProgramTable:
@@ -65,11 +65,11 @@ Resources:
         - KeyType: HASH
           AttributeName: workspaceId
         - KeyType: RANGE
-          AttributeName: id
+          AttributeName: programId
       AttributeDefinitions:
         - AttributeName: workspaceId
           AttributeType: S
-        - AttributeName: id
+        - AttributeName: programId
           AttributeType: S
 
   ProjectTable:
@@ -82,11 +82,11 @@ Resources:
         - KeyType: HASH
           AttributeName: programId
         - KeyType: RANGE
-          AttributeName: id
+          AttributeName: projectId
       AttributeDefinitions:
         - AttributeName: programId
           AttributeType: S
-        - AttributeName: id
+        - AttributeName: projectId
           AttributeType: S
 
   TaskTable:
@@ -99,9 +99,9 @@ Resources:
         - KeyType: HASH
           AttributeName: projectId
         - KeyType: RANGE
-          AttributeName: id
+          AttributeName: taskId
       AttributeDefinitions:
         - AttributeName: projectId
           AttributeType: S
-        - AttributeName: id
+        - AttributeName: taskId
           AttributeType: S
