--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,7 +35,8 @@
     "react-fileupload": "^2.0.0",
     "react-hook-form": "^6.13.1",
     "react-query": "^3.12.0",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -45,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
