ci: split audit, install, and test into separate steps

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -34,6 +34,4 @@ jobs:
         (cd packages/api && npm ci)
 
     - name: Test packages
-      run: |
-        (cd packages/ui && npm test) & \
-        (cd packages/api && npm test)
+      run: npm test
