--- a/.github/workflows/on-push-to-master.yaml
+++ b/.github/workflows/on-push-to-master.yaml
@@ -20,11 +20,21 @@ jobs:
       with:
         node-version: 12.x
     
-    - name: Install package
+
+    - name: Audit packages
       run: |
-        (npm ci && npm audit --audit-level critical && npm test) & \
-        (cd packages/ui && npm ci && npm audit --audit-level critical && npm test) & \
-        (cd packages/api && npm ci && npm audit --audit-level critical && npm test)
+        (npm audit --audit-level critical) & \
+        (cd packages/ui && npm audit --audit-level critical) & \
+        (cd packages/api && npm audit --audit-level critical)
+    
+    - name: Install packages
+      run: |
+        (npm ci) & \
+        (cd packages/ui && npm ci) & \
+        (cd packages/api && npm ci)
+
+    - name: Test packages
+      run: npm test
 
     - name: Deploy to staging
       run: |
