--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "airbnb",
+    "airbnb"
   ],
   "env": {
     "node": true,
@@ -53,6 +53,10 @@
     "import/no-dynamic-require": "off",
     "react/jsx-filename-extension": "off",
     "react/no-unescaped-entities": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-unused-vars": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-shadow": "error"
   }
 }
