--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "aws-amplify": "^3.3.17",
     "aws-amplify-react": "^4.2.23",
     "babel-plugin-import": "^1.13.3",
+    "dayjs": "^1.10.4",
     "less": "^4.1.1",
     "next": "^10.0.9",
     "react": "17.0.1",
@@ -43,8 +44,8 @@
     "@types/jest": "^26.0.17",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.15.0",
