--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.4",
     "less": "^4.1.1",
+    "less-vars-to-js": "^1.3.0",
     "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
