--- a/.eslintrc
+++ b/.eslintrc
@@ -57,6 +57,7 @@
     "no-unused-vars": "off",
     "no-shadow": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-shadow": "error"
+    "@typescript-eslint/no-shadow": "error",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
